@@ -1,3 +1,7 @@
+2002-03-06  Alexandre Oliva  <aoliva@redhat.com>
+
+	* exp_command.c (STARARGV): Indent #defines properly.
+
 2001-09-28  Kevin Buettner  <kevinb@redhat.com>
 
 	* configure.in (_XOPEN_SOURCE): Permit definition of _NSIG to
